@@ -3,6 +3,7 @@
 # Load testing for File::Find::Rule::Perl
 
 use strict;
+use warnings;
 BEGIN {
 	$|  = 1;
 	$^W = 1;
