@@ -1,6 +1,7 @@
 #!/usr/bin/perl
 
 use strict;
+use warnings;
 BEGIN {
 	$|  = 1;
 	$^W = 1;
